--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <br><br>
 <img src="logo.png" width="210" height="50" style="margin-left: 30px;">
 
-<div class="link">
+<div class="link" style="margin-left: -100px;">
   <a href="index.html">HOME </a>
   <a href="team.html" style="margin-left: 10px;">VOLUNTEER</a>
   <a href="subjects.html" style="margin-left: 10px;">RESOURCES</a>
@@ -28,7 +28,7 @@
 <br><br><br><br><br>
   <div class="misvis" style="margin-left: 550px; margin-top: -500px">
       <h1 style="color: #9340ff; font-size: 60px; margin-left: 130px;"> <span class="header" style="margin-left: 500px;">MISSION</span> </h1>
-    <br><p style="font-size: 20px; color: white;margin-left: 490px;">To inspire and empower students around the <br>     world through the power of curiosity.</p>
+    <br><p style="font-size: 20px; color: white;margin-left: 490px;">To inspire and empower students around the world through the <br>power of curiosity.</p>
     <br><br>
     <h1 style="color: #9340ff; font-size: 60px; margin-left: 130px;"> <span class="header" style="margin-left: 500px;">VISION</span> </h1><br>
     <p style="font-size: 20px; color: white;margin-left: 490px;">To provide quality education and impact <br> millions of learners globally.</p>
