--- a/index.html
+++ b/index.html
@@ -168,6 +168,10 @@
             padding: 30px;
         }
     }
+
+    html {
+  scroll-behavior: smooth;
+}
 </style>
 </head>
 <body>
@@ -179,11 +183,12 @@
 <header style="text-align: justify; line-height: 1.5;"><center>
     <h1>Welcome to Delpha Education</h1><br><br>
     <p>Welcome to our company - your one-stop-shop for high-quality IGCSE notes across a range of subjects. Our comprehensive collection of notes is designed to help students prepare for their exams with confidence. Our team of experienced students and subject experts has crafted each note to cover the entire syllabus in a concise and easy-to-understand manner. We cover subjects like mathematics, biology, chemistry, physics, and many more. Our notes are perfect for students who want to excel in their exams and achieve their academic goals. Join us today and start your journey towards success!</p>
-    <br><br><a href="#" class="cta">Get Started</a>
+    <br><br><a href="#courses" class="cta">Get Started</a>
 </center>
 </header>
 
 <!-- Main content -->
+<div id="courses">
 <main>
     <h2>Our Courses</h2>
     <p>Choose from a wide range of courses in various fields, including:</p>
@@ -219,6 +224,7 @@
     </div>
 
 </main>
+</div>
 
 <!-- Footer -->
 <footer><center>
